# LeanStateSearch

./: .env.example  .gitignore  Makefile  README.md  compose.yaml  flake.nix  lib.nix  shell.nix
lean-state-search/: Dockerfile  buf.gen.yaml  package-lock.json  package.json  pnpm-lock.yaml
lean-state-search/app/: globals.css  layout.tsx  page.tsx
lean-state-search/app/api/search/: route.ts
lean-state-search/app/graph/[name]/: page.tsx
lean-state-search/components/: about.tsx  autocomplete-input.tsx  button.tsx  graph.tsx  markdown.tsx  search-form.tsx  search-result.tsx  searchbox.tsx
lean-state-search/hooks/: useAutocomplete.ts
lean-state-search/lib/: actions.ts  grpc.ts
protos/: buf.gen.yaml
protos/state_search/v1/: state_search.proto
scripts/: compose.yaml  init-pg.sh  init-pg.sql
state-search-be/: .env  .env.local  .gitignore  Dockerfile  main.py  pyproject.toml
state-search-be/prisma/: schema.prisma
state-search-be/scripts/: create_vector_store.py  export_feedbacks.py  export_graph.py  upload_dependency.py  upload_theorem.py
state-search-be/src/state_search_be/state_search/v1/: state_search_pb2.py
state-search-be/state_search_be/: api.py  eval.py  flag_model.py
state-search-be/state_search_be/state_search/v1/: state_search_pb2.py  state_search_pb2.pyi  state_search_pb2_grpc.py
