[tool.poetry]
authors = ["timechess <tyc221@ruc.edu.cn>"]
description = ""
name = "state_search_be"
packages = [
    { include = "state_search_be" },
    { include = "state_search", from = "state_search_be" },
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
grpcio = "^1.69.0"
grpcio-tools = "^1.69.0"
jsonlines = "^4.0.0"
prisma = "^0.15.0"
protobuf = "^5.29.3"
python = ">=3.11, <3.13"
python-dotenv = "^1.0.0"
sentence-transformers = "^3.3.1"
qdrant-client = "^1.13.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["tests/", "**/__pycache__/", ".venv/", "dist/", "state_search"]